fix(css): When user resize the window the content gets overlapped. Fixes https://github.com/vizabi/vizabi/issues/1888

--- a/client/src/styles/content.styl
+++ b/client/src/styles/content.styl
@@ -98,7 +98,7 @@
   padding 0
   float right
   +for_breakpoint(medium)
-    margin-right 175px
+    margin-right 100px
 
   &.mobile
     display none
