--- a/client/src/styles/header.styl
+++ b/client/src/styles/header.styl
@@ -25,7 +25,11 @@
     right 20px
     opacity 0.6
     font-size 24px
-
+    
+    +for_breakpoint(medium)
+      bottom: 14px
+      font-size: 16px
+      
     +for_breakpoint(small)
       top 5px
       bottom auto
